--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@psf/bch-js": "^3.8.2",
     "apidoc": "^0.23.0",
     "bch-donation": "^1.1.0",
+    "bch-token-sweep": "^1.4.5",
     "bignumber.js": "^9.0.0"
   },
   "devDependencies": {
