--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "npm run lint; npm run build"
     }
   }
 }
